# test_Brendwall

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py
products/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/products/: product_list.html
static/products/css/: main.css
static/products/js/: app.js
